# actsys

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  general-question.yml
.github/workflows/: checks-actsys-core.yml  checks-actsys-ui.yml  lint-actsys-all.yml  release-if-needed.yml  test-integration-actsys-core.yml  test-integration-actsys-ui.yml  test-unit-actsys-core.yml  test-unit-actsys-ui.yml
.vale/: .vale.ini
.vale/styles/Microsoft/: Acronyms.yml  Headings.yml  VizroCapitals.yml  ignore.txt
actsys-core/: README.md  pyproject.toml
actsys-core/src/actsys_core/: __about__.py
actsys-ml/: README.md  pyproject.toml
actsys-ml/tests/: __init__.py
actsys-ui/: LICENSE.txt  README.md  pyproject.toml
tools/: check_for_datafiles.py  check_package_release.py  release.sh
