[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actsys-core"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jeffamaxey", email = "jeff.maxey5@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jeffamaxey/actsys-core#readme"
Issues = "https://github.com/jeffamaxey/actsys-core/issues"
Source = "https://github.com/jeffamaxey/actsys-core"

[tool.hatch.version]
path = "src/actsys_core/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/actsys_core tests}"

[tool.coverage.run]
source_pkgs = ["actsys_core", "tests"]
branch = true
parallel = true
omit = [
  "src/actsys_core/__about__.py",
]

[tool.coverage.paths]
actsys_core = ["src/actsys_core", "*/actsys-core/src/actsys_core"]
tests = ["tests", "*/actsys-core/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
