[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actsys-ml"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jeffamaxey", email = "jeff.maxey5@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jeffamaxey/actsys-ml#readme"
Issues = "https://github.com/jeffamaxey/actsys-ml/issues"
Source = "https://github.com/jeffamaxey/actsys-ml"

[tool.hatch.version]
path = "src/actsys_ml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/actsys_ml tests}"

[tool.coverage.run]
source_pkgs = ["actsys_ml", "tests"]
branch = true
parallel = true
omit = [
  "src/actsys_ml/__about__.py",
]

[tool.coverage.paths]
actsys_ml = ["src/actsys_ml", "*/actsys-ml/src/actsys_ml"]
tests = ["tests", "*/actsys-ml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
